# thesis_dev_final

./: .gitignore  CMakeLists.txt  README.md  settings.json
include/: ellipsoid.hpp  nbvstrategy.hpp  structs.hpp  voxelstruct.hpp
src/: ellipsoid.cpp  main.cpp  main_main.cpp  nbvstrategy.cpp  voxelstruct.cpp
